test/fail/base-and-core.mo
//MOC-FLAG --implicit-lib-vals --package base base-and-core/base --package core base-and-core/core
import A "mo:base/Array";
import B "mo:core/Array";

persistent actor {


}
